--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,8 +222,13 @@ h6 {
   position: relative;
   z-index: 2;
   min-width: 300px;
+  margin-left: 400px;
+  margin-bottom: 150px;
 }
 #hero h1 {
+  font-size: 4.4rem;
+  font-weight: 500;
+  text-shadow: 1px 1px 2px rgb(0 0 0 /60%);
   margin: 0 0 10px 0;
   font-size: 64px;
   font-weight: 700;
@@ -231,22 +236,46 @@ h6 {
   color: #fff;
 }
 #hero p {
+  font-size: 4.4rem;
+  font-weight: 500;
+  text-shadow: 1px 1px 2px rgb(0 0 0 /60%);
   color: #fff;
   margin-bottom: 50px;
   font-size: 26px;
   font-family: 'Poppins', sans-serif;
 }
 #hero p span {
+  font-weight: 500;
+  text-shadow: 1px 1px 2px rgb(0 0 0 /60%);
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
   border-bottom: 3px solid #149ddd;
 }
+
 @media (min-width: 1024px) {
   #hero {
     background-attachment: fixed;
   }
+  #hero .hero-container {
+    max-width: 30%;
+  }
+  #hero p span {
+    font-size: 2.2rem;
+  }
 }
+
+@media (max-width: 1200px) {
+  #hero {
+    background-attachment: fixed;
+  }
+  #hero .hero-container {
+    align-items: center;
+    margin-left: 100px;
+    margin-bottom: 0;
+  }
+}
+
 @media (max-width: 768px) {
   #hero h1 {
     font-size: 28px;
@@ -256,6 +285,11 @@ h6 {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
+  }
+  #hero .hero-container {
+    align-items: flex-start;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
 
