--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,5 +6,5 @@
 @import '../vendor/glightbox/css/glightbox.min.css';
 @import '../vendor/swiper/swiper-bundle.min.css';
 @import './style.css';
-
 @import './custom.css';
+@import './general.css';
