Portfolio Section --version 01.00.64

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -73,6 +73,9 @@
 
 .project-img-box {
   align-self: center;
+  max-height: 500px;
+  overflow: hidden;
+  border: 2px solid #149ddd;
 }
 
 /* Reversed  */
