--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,30 +1,43 @@
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  background: #f1f1f1;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #a5b5a5;
-    border-radius: 4px;
-    -webkit-transition: color .4s;
-    transition: color .4s;
+  background: #a5b5a5;
+  border-radius: 4px;
+  -webkit-transition: color 0.4s;
+  transition: color 0.4s;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #95a595;
+  background: #95a595;
 }
 
 .contact .info p a {
-    color: #173b6c;
+  color: #173b6c;
 }
 
 .text-secondary {
-    color: #272829 !important;
+  color: #272829 !important;
+}
+
+.light-blue {
+  color: #37b3ed !important;
+  text-decoration: underline;
+  text-underline-position: below;
+}
+
+.smaller-li {
+  font-size: small;
+  font-weight: bold;
+  margin-top: 2%;
+  margin-left: 5%;
 }
