--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #272829;
 }
 
@@ -22,7 +22,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .hide {
@@ -88,7 +88,7 @@ h6 {
   font-weight: 600;
   -moz-text-align-last: center;
   text-align-last: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 #header .profile h1 a,
 #header .profile h1 a:hover {
@@ -209,11 +209,11 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url('../img/hero-bg.png') top center;
+  background: url("../img/hero-bg.png") top center;
   background-size: cover;
 }
 #hero:before {
-  content: '';
+  content: "";
   background: rgba(5, 13, 24, 0.3);
   position: absolute;
   bottom: 0;
@@ -246,7 +246,7 @@ h6 {
   color: #fff;
   margin-bottom: 50px;
   font-size: 26px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 #hero p span {
   font-weight: 500;
@@ -284,7 +284,7 @@ h6 {
 .myBtn::before,
 .myBtn:visited::before,
 .myBtn:link::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 0;
@@ -369,7 +369,7 @@ section {
   color: #173b6c;
 }
 .section-title h2::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 50px;
@@ -440,7 +440,7 @@ section {
 .facts .count-box p {
   padding: 15px 0 0 0;
   margin: 0 0 0 60px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 14px;
   color: #122f57;
 }
@@ -450,7 +450,7 @@ section {
   margin-top: 20px;
   color: #122f57;
   font-size: 15px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   transition: ease-in-out 0.3s;
 }
 .facts .count-box a:hover {
@@ -472,7 +472,7 @@ section {
   text-transform: uppercase;
   display: block;
   font-weight: 600;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #050d18;
 }
 .skills .progress .skill .val {
@@ -526,7 +526,7 @@ section {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #050d18;
   margin-bottom: 10px;
 }
@@ -601,7 +601,7 @@ section {
   z-index: 1;
 }
 .portfolio .portfolio-wrap::before {
-  content: '';
+  content: "";
   background: rgba(255, 255, 255, 0.5);
   position: absolute;
   left: 0;
@@ -811,7 +811,7 @@ section {
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 .testimonials .testimonial-item p::after {
-  content: '';
+  content: "";
   width: 0;
   height: 0;
   border-top: 20px solid #fff;
@@ -947,7 +947,7 @@ section {
   padding: 15px;
 }
 .contact .php-email-form .loading:before {
-  content: '';
+  content: "";
   display: inline-block;
   border-radius: 50%;
   width: 24px;
@@ -976,7 +976,7 @@ section {
 .contact .php-email-form textarea {
   padding: 10px 15px;
 }
-.contact .php-email-form button[type='submit'] {
+.contact .php-email-form button[type="submit"] {
   background: #149ddd;
   border: 0;
   padding: 10px 24px;
@@ -984,7 +984,7 @@ section {
   transition: 0.4s;
   border-radius: 4px;
 }
-.contact .php-email-form button[type='submit']:hover {
+.contact .php-email-form button[type="submit"]:hover {
   background: #37b3ed;
 }
 
@@ -1001,7 +1001,7 @@ section {
   font-weight: 550;
   -moz-text-align-last: center;
   text-align-last: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .contact .profile h1 a,
@@ -1059,7 +1059,7 @@ section {
   display: inline-block;
   padding-right: 10px;
   color: #0e2442;
-  content: '/';
+  content: "/";
 }
 @media (max-width: 768px) {
   .breadcrumbs .d-flex {
