--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -41,3 +41,97 @@
   margin-top: 2%;
   margin-left: 5%;
 }
+
+.article-card {
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  transition: 0.4s;
+}
+
+.article-card:hover {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+.article-card img {
+  border-start-start-radius: 8px;
+  border-start-end-radius: 8px;
+  object-fit: cover;
+}
+
+.article-card .img-container {
+  position: relative;
+  border-start-start-radius: 8px;
+  border-start-end-radius: 8px;
+}
+
+.article-card .img-container::before {
+  position: absolute;
+  content: "";
+  border-start-start-radius: 8px;
+  border-start-end-radius: 8px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.article-card .content {
+  padding: 16px;
+}
+
+.article-card .content h3 {
+  font-size: 24px;
+}
+
+.article-card .content h3 a {
+  color: #149ddd;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  transition: 0.4s;
+}
+
+.article-card .content h3 a:hover {
+  color: #094868;
+}
+
+.article-card .content .date {
+  font-size: 13px;
+  margin-bottom: 8px;
+  color: #aaa;
+}
+
+.article-card .content p {
+  height: 75px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.article-card .content .read-more {
+  color: #149ddd;
+  border-radius: 8px;
+  border: 1px solid #149ddd;
+  transition: 0.4s;
+  padding: 8px;
+}
+
+.article-card .content .read-more:hover {
+  color: #094868;
+  border-color: #094868;
+}
+
+.btn-view-all {
+  background-color: #149ddd;
+}
+
+.btn-view-all:hover {
+  background-color: #094868;
+}
